New-Upload-1755854042013/objects/Object_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modify_All_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modify All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Set Name</label>
        <referenceTo>Permission_Set_Admin__c</referenceTo>
        <relationshipLabel>Object Permissions</relationshipLabel>
        <relationshipName>Object_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>Object Permissions</relationshipLabel>
        <relationshipName>Object_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View_All_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View All Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_All_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View All Records</label>
        <type>Checkbox</type>
    </fields>
    <label>Object Permission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Object Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>